k8s/hardened/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hardened-web
  namespace: security-lab
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hardened-web
  template:
    metadata:
      labels:
        app: hardened-web
    spec:
      serviceAccountName: web
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 101
        runAsGroup: 101
        fsGroup: 101
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: web
          image: nginx:1.27.5-alpine
          ports:
            - name: http
              containerPort: 8080
          command:
            - /bin/sh
            - -c
            - |
              cat >/tmp/nginx.conf <<'EOF'
              pid /tmp/nginx.pid;
              events {}
              http {
                access_log /dev/stdout;
                error_log /dev/stderr;
                server {
                  listen 8080;
                  location / {
                    return 200 'secure-k8s-lab\n';
                    add_header Content-Type text/plain;
                  }
                }
              }
              EOF
              nginx -c /tmp/nginx.conf -g 'daemon off;'
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 50m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 2
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          volumeMounts:
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: tmp
          emptyDir:
            sizeLimit: 16Mi
